# NeuTracer

./: .clang-format  .gitignore  .gitmodules  Makefile  README.md  requirements.txt
TrainCheck/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  inject.py  pyproject.toml
TrainCheck/docs/: 5-min-tutorial.md  ae-eval-s5.1-silent-issue-detection.md  ae-eval-s5.3-transferability.md  ae-eval-s5.4-fp-rate.md  ae-eval-s5.5-perf-overhead.md  ae.md  check.md  infer.md  installation-guide.md  instr.md  technical-doc.md  usage-guide.md
TrainCheck/tests/: test_utils.py
TrainCheck/traincheck/: __init__.py  checker.py  collect_trace.py  infer_engine.py  utils.py
TrainCheck/traincheck/config/: config.py
TrainCheck/traincheck/developer/: README.md  annotations.py
TrainCheck/traincheck/instrumentor/: VFProxy.py  __init__.py  caches.py  dumper.py  replace_functions.py  source_file.py  tracer.py  types.py  variable.py
TrainCheck/traincheck/invariant/: CUDA_relation.py  DistinctArgumentRelation.py  __init__.py  base_cls.py  consistency_relation.py  consistency_transient_vars.py  contain_relation.py  cover_relation.py  lead_relation.py  precondition.py  relation_pool.py  symbolic_value.py  var_periodic_change_relation.py
TrainCheck/traincheck/proxy_wrapper/: Changelog.md  README.md  __init__.py  dumper.py  hash.py  proxy.py  proxy_basics.py  proxy_config.py  proxy_handler.py  proxy_methods.py  proxy_observer.py  proxy_registry.py  torch_proxy.py  utils.py
TrainCheck/traincheck/runner/: __init__.py  runner.py
doc/: server.md
(+278 files in other folders)
